# embedded-air-quality-monitor-rust

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
