[package]
name = "embedded-air-quality-monitor-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
# panic
defmt = "1.0.0"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
# 阻塞
nb = "1.0.0"
# 总线复用库
embedded-hal-bus = "0.3.0"
# SHT30 传感器驱动
sht31 = "0.3.3"
# 无标准库环境下的内存安全字符串
heapless = "0.9.0"
# GME12864-49
ssd1306 = "0.10.0"
embedded-graphics = "0.8.0"

[dependencies.stm32f1xx-hal]
version = "0.11.0"
features = ["stm32f103", "medium"]

[profile.dev]
panic = "abort"
opt-level = "s"    # Optimize for Size
lto = true         # 链接时优化